Changed code to no longer  compute std. dev. FLUXCAL scatter but rather the RMS scatter (similar formula to std. dev) for mag.

--- a/scatter_compare.ipynb
+++ b/scatter_compare.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "4c27b9e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from IPython.display import display, Math\n"
    ]
   },
   {
@@ -2336,6 +2337,14 @@
    "id": "28916e34",
    "metadata": {},
    "source": [
+    "##  Converting FLUXCAL to Magnitudes\n",
+    "\n",
+    "We use the standard magnitude conversion:\n",
+    "\n",
+    "$\n",
+    "m = 27.5 - 2.5 \\log_{10}(\\text{FLUXCAL})\n",
+    "$\n",
+    "\n",
     "### **Standard Deviation Formula**\n",
     "\n",
     "$\\huge \\sigma = \\sqrt{\\frac{\\sum_{i=1}^{N} (x_i - \\mu)^2}{N}}$\n",
@@ -2347,38 +2356,49 @@
     "- **$x_i$** = each value in the population  \n",
     "- **$\\mu$** = population mean\n",
     "\n",
-    "### **RMS Scatter of Fluxes**\n",
+    "### **RMS Scatter of Magnitudes**\n",
     "\n",
+    "$\\huge \\sigma_{\\text{scatter}} = \\sqrt{\\frac{1}{N}\\sum_{i=1}^{N}(m_{+,i} - m_{-,i})^2}$  \n",
     "\n",
-    "$\\huge \\sigma_{\\text{scatter}} = \\sqrt{\\frac{1}{N}\\sum_{i=1}^{N}(F_{+,i} - F_{-,i})^2}$  \n",
-    "\n",
-    "Where: \n",
-    "\n",
-    "- **$\\sigma_{\\text{scatter}}$** = RMS deviation between scatter and no-scatter fluxes  \n",
+    "Where:  \n",
+    "- **$\\sigma_{\\text{scatter}}$** = RMS deviation between scatter and no-scatter magnitudes  \n",
     "- **$N$** = number of observations (data points)  \n",
-    "- **$F_{+,i}$** = flux with scatter for the $i^{\\text{th}}$ observation  \n",
-    "- **$F_{-,i}$** = flux without scatter for the $i^{\\text{th}}$ observation  \n",
+    "- **$m_{+,i}$** = magnitude with scatter for the $i^{\\text{th}}$ observation  \n",
+    "- **$m_{-,i}$** = magnitude without scatter for the $i^{\\text{th}}$ observation  \n",
     "\n",
-    "**Conceptually:** We are measuring: how far the scatter simulation deviates from the no-scatter (baseline) fluxes."
+    "**Conceptually:** We are measuring **how far the scatter simulation deviates from the no-scatter (baseline) magnitudes** on average.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "b4346e15",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standard Deviation of Scatter g-band: 9618.830917817173\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma_{scatter} \\text{ of g-band} = 0.1612$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "sigma_scatter_g = np.sqrt(np.mean((plsusscatter_g['FLUXCAL'] - noscatter_g['FLUXCAL'])**2))\n",
-    "print(f\"Standard Deviation of Scatter g-band: {sigma_scatter_g}\")"
+    "# --- Convert both to mag ---\n",
+    "\n",
+    "g_plus = plusscatter_dat[plusscatter_dat['BAND'] == \"LSST-g\"].reset_index(drop=True)\n",
+    "g_no   = noscatter_dat[noscatter_dat['BAND'] == \"LSST-g\"].reset_index(drop=True)\n",
+    "\n",
+    "g_plus_mag = 27.5 - 2.5 * np.log10(g_plus[\"FLUXCAL\"])\n",
+    "g_no_mag = 27.5 - 2.5 * np.log10(g_no[\"FLUXCAL\"])\n",
+    "\n",
+    "sigma_scatter_g = np.sqrt(np.mean((g_plus_mag - g_no_mag)**2))\n",
+    "display(Math(fr\"\\sigma_{{scatter}} \\text{{ of g-band}} = {sigma_scatter_g:.4f}\"))"
    ]
   },
   {
@@ -2391,33 +2411,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a2f4fdd4",
+   "execution_count": 46,
+   "id": "9fe03520",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMS Scatter for LSST-g: 9618.8309\n",
-      "RMS Scatter for LSST-r: 7889.7502\n",
-      "RMS Scatter for LSST-i: 8666.9915\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma_{scatter} \\text{ of LSST-g} = 0.1612$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma_{scatter} \\text{ of LSST-r} = 0.0796$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma_{scatter} \\text{ of LSST-i} = 0.1274$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "bands = [\"LSST-g\", \"LSST-r\", \"LSST-i\"]\n",
     "\n",
     "for band in bands:\n",
-    "\n",
-    "    # Filter the specific band\n",
+    "    # Filter the specific band and reset index for alignment\n",
     "    plus_band = plusscatter_dat[plusscatter_dat['BAND'] == band].reset_index(drop=True)\n",
     "    no_band = noscatter_dat[noscatter_dat['BAND'] == band].reset_index(drop=True)\n",
     "\n",
-    "    # Compute RMS scatter\n",
-    "    sigma_scatter = np.sqrt(np.mean((plus_band['FLUXCAL'] - no_band['FLUXCAL'])**2))\n",
+    "    # Convert to mag\n",
+    "    plus_mag = 27.5 - 2.5 * np.log10(plus_band['FLUXCAL'])\n",
+    "    no_mag = 27.5 - 2.5 * np.log10(no_band['FLUXCAL'])\n",
     "\n",
-    "    print(f\"RMS Scatter for {band}: {sigma_scatter:.4f}\")"
+    "    # Compute RMS scatter in mag\n",
+    "    sigma_scatter = np.sqrt(np.mean((plus_mag - no_mag)**2))\n",
+    "\n",
+    "    display(Math(fr\"\\sigma_{{scatter}} \\text{{ of {band}}} = {sigma_scatter:.4f}\"))"
    ]
   },
   {
@@ -2432,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b5d546f3",
    "metadata": {},
    "outputs": [],
@@ -2475,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "32501dc6",
    "metadata": {},
    "outputs": [
@@ -2594,7 +2646,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a83881b3-7251-4dcf-b957-eb8b0c81091f",
+       "ref": "a4edb56b-70b1-4adb-ab29-d532bed63784",
        "rows": [
         [
          "0",
@@ -5453,7 +5505,7 @@
        "[59 rows x 21 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5467,7 +5519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "eef9a4fa",
    "metadata": {},
    "outputs": [
@@ -5704,7 +5756,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "48a08522-ed1f-4c52-a22a-075ca2992d65",
+       "ref": "b29b59bc-108c-42dd-bf3e-64e5fcfbd05f",
        "rows": [
         [
          "0",
@@ -9724,7 +9776,7 @@
        "[59 rows x 43 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
