MInor cosmetic changes.

--- a/scatter_compare.ipynb
+++ b/scatter_compare.ipynb
@@ -2337,13 +2337,15 @@
    "id": "28916e34",
    "metadata": {},
    "source": [
-    "##  Converting FLUXCAL to Magnitudes\n",
+    "### **Converting FLUXCAL to Magnitudes**\n",
     "\n",
     "We use the standard magnitude conversion:\n",
     "\n",
     "$\n",
     "m = 27.5 - 2.5 \\log_{10}(\\text{FLUXCAL})\n",
     "$\n",
+    "\n",
+    "Note: 27.5 is the zero point magnitude.\n",
     "\n",
     "### **Standard Deviation Formula**\n",
     "\n",
