Corrected to mag_rms output rather than plain old rms

--- a/scatter_compare.ipynb
+++ b/scatter_compare.ipynb
@@ -9871,7 +9871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c5d46a9c",
    "metadata": {},
    "outputs": [
@@ -10198,7 +10198,7 @@
     "results_df.index.name = \"SN_ID\"  # Set the index name to \"SN_ID\"\n",
     "\n",
     "# Save the DataFrame to a CSV file\n",
-    "results_df.to_csv(\"rms_scatter_results.csv\")\n",
+    "results_df.to_csv(\"mag_rms_scatter_results.csv\")\n",
     "\n",
     "print(results_df.head())"
    ]
