Solved Product Delivered

--- a/scatter_compare_2.ipynb
+++ b/scatter_compare_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "013da3e0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
    "source": [
     "### Now lets automate this to all the .dat files out there ###\n",
     "\n",
-    "Step 1 would be to define a method that collects all the near peak rows froma. given folder (i.e. MC_BAYSN_NOSCATTER or MC_BAYSN_PLUSSCATTER. "
+    "Step 1 would be to define a method that collects all the near peak rows from a given folder (i.e. MC_BAYSN_NOSCATTER or MC_BAYSN_PLUSSCATTER. "
    ]
   },
   {
@@ -395,12 +395,20 @@
    "source": [
     "### Found Out the cause of the Mismatch ###\n",
     "\n",
-    "The individual FILENAME of each row, as part of the following .csv files contain `NOSCATTER` and `PLUSSCATTER` in them. Making it impossible to match any rows together even if matches exist. \n"
+    "The individual FILENAME of each row, as part of the following .csv files contain `NOSCATTER` and `PLUSSCATTER` in them. Making it impossible to match any rows together even if matches exist. \n",
+    "\n",
+    "To solve this problem, I simply renamed the `FILENAME` of each .DAT file to contain only the SN identifier. \n",
+    "\n",
+    "For example: `MC_BAYSN_PLUSSCATTER_SN000011.DAT` -> `SN000011`\n",
+    "\n",
+    "This way when I try to Merge data files, I can use `FILENAME`, `MJD`, and `BAND` to precisely allign data together and ultimately: do computation on it. \n",
+    "\n",
+    "NOTE: this means that I have to keep careful track weather my .csv files are from the dataset that contained scatter vs. a data set that did not contain scatter. This is solved by the _NO_S and _PLUS_S header addendums in the output file: `merged_near_peak_rows.csv`. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a6cd306e",
    "metadata": {},
    "outputs": [
@@ -413,6 +421,11 @@
     }
    ],
    "source": [
+    "# extracts the SN identifier from FILENAME\n",
+    "# SN - literal text match\n",
+    "# \\d+ - matches one or more digits after the SN\n",
+    "# () - captures only this group and no other file name. \n",
+    "\n",
     "nos_df[\"FILENAME\"] = nos_df[\"FILENAME\"].str.extract(r\"(SN\\d+)\")\n",
     "plus_df[\"FILENAME\"] = plus_df[\"FILENAME\"].str.extract(r\"(SN\\d+)\")\n",
     "\n",
@@ -429,8 +442,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "155271f5",
+   "metadata": {},
+   "source": [
+    "### Rows that Could not Be Matched ###\n",
+    "\n",
+    "Introducing scatter and no scatter ends up changing the PEAKMJD for individual .DAT files. This causes entreis in both NOSCATTER and PLUSSCATTER data files that are within +/- 7 days for indivudal data files but do not match entries in their counterpart as PEAKMDJDS will not cover the same ranges of MJD's between dat afiles. \n",
+    "\n",
+    "For an example of this take a look at The PEAKMJD entry in the `SN000016` .DAT files."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "0c01fe94",
    "metadata": {},
    "outputs": [
@@ -438,6 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " No Match Rows: \n",
       "\n",
       "Rows only in NOSCATTER (left_only):\n",
       "     FILENAME         MJD    BAND\n",
@@ -474,15 +500,22 @@
     ")\n",
     "\n",
     "# --- Extract missing rows  NOSCATTER  PLUSSCATTER ---\n",
+    "# note: left means the first DataFrame (nos_df)\n",
+    "# note: right means the second DataFrame (plus_df)\n",
     "left_only = compare_df[compare_df[\"_merge\"] == \"left_only\"]\n",
     "right_only = compare_df[compare_df[\"_merge\"] == \"right_only\"]\n",
     "\n",
     "# --- Print results ---\n",
+    "\n",
+    "print(\" No Match Rows: \")\n",
+    "\n",
     "print(\"\\nRows only in NOSCATTER (left_only):\")\n",
     "print(left_only[[\"FILENAME\", \"MJD\", \"BAND\"]])\n",
     "\n",
     "print(\"\\nRows only in PLUSSCATTER (right_only):\")\n",
-    "print(right_only[[\"FILENAME\", \"MJD\", \"BAND\"]])"
+    "print(right_only[[\"FILENAME\", \"MJD\", \"BAND\"]])\n",
+    "\n",
+    "compare_df.to_csv(\"compare_near_peak_rows.csv\", index=False)\n"
    ]
   },
   {
@@ -490,13 +523,116 @@
    "id": "1d43c725",
    "metadata": {},
    "source": [
-    "### Lets Print Out What Did Not Get Merged ###"
+    "### Separating Our Merged Data into df that have individual g, r, i bands ###\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "390dd281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate into three DataFrames based on BAND\n",
+    "merged_g_df = merged_df[merged_df[\"BAND\"].str.contains(\"LSST-g\")]\n",
+    "merged_r_df = merged_df[merged_df[\"BAND\"].str.contains(\"LSST-r\")]\n",
+    "merged_i_df = merged_df[merged_df[\"BAND\"].str.contains(\"LSST-i\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dc728bf",
+   "metadata": {},
+   "source": [
+    "### Converting FLUXCAL to Magnitudes\n",
+    "\n",
+    "We use the standard magnitude conversion:\n",
+    "\n",
+    "$\n",
+    "m = 27.5 - 2.5 \\log_{10}(\\text{FLUXCAL})\n",
+    "$\n",
+    "\n",
+    "Note: 27.5 is the zero point magnitude."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f2b2f15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df[\"MAG_NO_S\"] = 27.5 - 2.5 * np.log10(merged_df[\"FLUXCAL_NO_S\"])\n",
+    "merged_df[\"MAG_PLUS_S\"] = 27.5 - 2.5 * np.log10(merged_df[\"FLUXCAL_PLUS_S\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285d7efb",
+   "metadata": {},
+   "source": [
+    "### RMS Scatter of Magnitudes\n",
+    "\n",
+    "$\\huge \\sigma_{\\text{scatter}} = \\sqrt{\\frac{1}{N}\\sum_{i=1}^{N}(m_{+,i} - m_{-,i})^2}$  \n",
+    "\n",
+    "Where:  \n",
+    "- **$\\sigma_{\\text{scatter}}$** = RMS deviation between scatter and no-scatter magnitudes  \n",
+    "- **$N$** = number of observations (data points)  \n",
+    "- **$m_{+,i}$** = magnitude with scatter for the $i^{\\text{th}}$ observation  \n",
+    "- **$m_{-,i}$** = magnitude without scatter for the $i^{\\text{th}}$ observation  \n",
+    "\n",
+    "**Conceptually:** We are measuring **how far the scatter simulation deviates from the no-scatter (baseline) magnitudes** on average.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "94147fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS_g: 0.130852 (N = 83)\n",
+      "RMS_r: 0.123455 (N = 133)\n",
+      "RMS_i: 0.121236 (N = 137)\n",
+      "\n",
+      "Saved RMS results to rms_scatter_per_band.csv\n",
+      "  BAND    N  RMS_SCATTER\n",
+      "0    g   83     0.130852\n",
+      "1    r  133     0.123455\n",
+      "2    i  137     0.121236\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Compute Δm = m_plus - m_no ---\n",
+    "merged_df[\"DELTA_M\"] = merged_df[\"MAG_PLUS_S\"] - merged_df[\"MAG_NO_S\"]\n",
+    "\n",
+    "# --- Compute RMS per band ---\n",
+    "rms_results = []\n",
+    "\n",
+    "for band in [\"g\", \"r\", \"i\"]:\n",
+    "    band_mask = merged_df[\"BAND\"].str.contains(band)\n",
+    "    band_data = merged_df.loc[band_mask, \"DELTA_M\"]\n",
+    "    N = len(band_data)\n",
+    "    rms = np.sqrt(np.mean(band_data**2))\n",
+    "    rms_results.append((band, N, rms))\n",
+    "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")\n",
+    "\n",
+    "# --- Optional: Save RMS results to CSV ---\n",
+    "rms_df = pd.DataFrame(rms_results, columns=[\"BAND\", \"N\", \"RMS_SCATTER\"])\n",
+    "rms_df.to_csv(\"rms_scatter_per_band.csv\", index=False)\n",
+    "print(\"\\nSaved RMS results to rms_scatter_per_band.csv\")\n",
+    "print(rms_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a848e7e",
    "metadata": {},
    "outputs": [],
    "source": []
