No singificant cahnges

--- a/scatter_compare_2.ipynb
+++ b/scatter_compare_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "013da3e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "94147fd2",
    "metadata": {},
    "outputs": [
@@ -597,13 +597,7 @@
      "text": [
       "RMS_g: 0.130852 (N = 83)\n",
       "RMS_r: 0.123455 (N = 133)\n",
-      "RMS_i: 0.121236 (N = 137)\n",
-      "\n",
-      "Saved RMS results to rms_scatter_per_band.csv\n",
-      "  BAND    N  RMS_SCATTER\n",
-      "0    g   83     0.130852\n",
-      "1    r  133     0.123455\n",
-      "2    i  137     0.121236\n"
+      "RMS_i: 0.121236 (N = 137)\n"
      ]
     }
    ],
@@ -620,22 +614,8 @@
     "    N = len(band_data)\n",
     "    rms = np.sqrt(np.mean(band_data**2))\n",
     "    rms_results.append((band, N, rms))\n",
-    "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")\n",
-    "\n",
-    "# --- Optional: Save RMS results to CSV ---\n",
-    "rms_df = pd.DataFrame(rms_results, columns=[\"BAND\", \"N\", \"RMS_SCATTER\"])\n",
-    "rms_df.to_csv(\"rms_scatter_per_band.csv\", index=False)\n",
-    "print(\"\\nSaved RMS results to rms_scatter_per_band.csv\")\n",
-    "print(rms_df.head())"
+    "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a848e7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
