--- a/scatter_compare_2.ipynb
+++ b/scatter_compare_2.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "94147fd2",
    "metadata": {},
    "outputs": [
@@ -595,9 +595,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS_g: 0.130852 (N = 83)\n",
-      "RMS_r: 0.123455 (N = 133)\n",
-      "RMS_i: 0.121236 (N = 137)\n"
+      "RMS_LSST-g: 0.130852 (N = 83)\n",
+      "RMS_LSST-r: 0.123455 (N = 133)\n",
+      "RMS_LSST-i: 0.121236 (N = 137)\n"
      ]
     }
    ],
@@ -608,7 +608,7 @@
     "# --- Compute RMS per band ---\n",
     "rms_results = []\n",
     "\n",
-    "for band in [\"g\", \"r\", \"i\"]:\n",
+    "for band in [\"LSST-g\", \"LSST-r\", \"LSST-i\"]:\n",
     "    band_mask = merged_df[\"BAND\"].str.contains(band)\n",
     "    band_data = merged_df.loc[band_mask, \"DELTA_M\"]\n",
     "    N = len(band_data)\n",
@@ -616,6 +616,14 @@
     "    rms_results.append((band, N, rms))\n",
     "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3297b19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
