Added SNANA Manual so I don't have to keep looking for it every time.

--- a/scatter_compare_2.ipynb
+++ b/scatter_compare_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "013da3e0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
    "id": "b7a9eade",
    "metadata": {},
    "source": [
-    "### Focusing on One Data File - First Lets Write the Code to Just find PEAKMJD in a file ###\n",
+    "### Modfication: Look for the  ###\n",
     "\n",
     "`PEAKMJD` is the Modified Julian Date (MJD) at which the supernova reaches peak brightness.\n",
     "It is listed in the header of each `.DAT` file.\n",
@@ -36,7 +36,7 @@
     "\n",
     "\n",
     "\n",
-    "<h3><u>Lets look at a single file:</u></h3>"
+    "<h3><u>Lets look at a single file and this time:</u></h3>"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "610aa3f1",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(61794.0825, 'LSST-r', 132721.0), (61795.0967, 'LSST-g', 168515.0), (61795.1033, 'LSST-i', 109874.0), (61795.113, 'LSST-r', 150376.0), (61800.1048, 'LSST-r', 199163.0), (61800.1287, 'LSST-g', 219159.0), (61802.0967, 'LSST-g', 218760.0), (61802.1033, 'LSST-i', 111339.0), (61802.113, 'LSST-r', 199301.0), (61808.0995, 'LSST-r', 162949.0), (61808.1233, 'LSST-i', 82502.5), (61813.0993, 'LSST-g', 114577.0), (61813.1059, 'LSST-i', 63145.6), (61813.1156, 'LSST-r', 121951.0), (61814.0297, 'LSST-i', 61825.9), (61817.0707, 'LSST-g', 81181.7), (61817.0773, 'LSST-i', 62970.9), (61817.0871, 'LSST-r', 103446.0), (61819.0178, 'LSST-i', 65964.3), (61822.1866, 'LSST-g', 50725.9), (61823.0234, 'LSST-i', 70918.1), (61824.0354, 'LSST-g', 42799.3), (61824.042, 'LSST-i', 69316.4), (61824.0517, 'LSST-r', 88240.5), (61827.0407, 'LSST-g', 34281.9), (61827.0645, 'LSST-r', 76913.4), (61832.0284, 'LSST-g', 25747.6), (61832.035, 'LSST-i', 52246.9), (61832.0448, 'LSST-r', 57004.6), (61835.0845, 'LSST-i', 43953.6), (61835.1083, 'LSST-r', 48272.7)]\n",
       "PEAKMJD: 61800.129\n",
       "Number of near-peak rows: 9\n",
       "          MJD    BAND   FLUXCAL\n",
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "01e65009",
    "metadata": {},
    "outputs": [
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "30dc04e0",
    "metadata": {},
    "outputs": [],
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "d667e6c4",
    "metadata": {},
    "outputs": [
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "8c490c2a",
    "metadata": {},
    "outputs": [
@@ -408,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a6cd306e",
    "metadata": {},
    "outputs": [
@@ -448,14 +447,14 @@
    "source": [
     "### Rows that Could not Be Matched ###\n",
     "\n",
-    "Introducing scatter and no scatter ends up changing the PEAKMJD for individual .DAT files. This causes entreis in both NOSCATTER and PLUSSCATTER data files that are within +/- 7 days for indivudal data files but do not match entries in their counterpart as PEAKMDJDS will not cover the same ranges of MJD's between dat afiles. \n",
+    "Introducing scatter  ends up changing the PEAKMJD for individual .DAT files. This causes entreis in both NOSCATTER and PLUSSCATTER data files that are within +/- 7 days for indivudal data files but do not match entries in their counterpart as PEAKMDJDS will not cover the same ranges of MJD's between dat afiles. \n",
     "\n",
     "For an example of this take a look at The PEAKMJD entry in the `SN000016` .DAT files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "0c01fe94",
    "metadata": {},
    "outputs": [
@@ -529,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "390dd281",
    "metadata": {},
    "outputs": [],
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2f2b2f15",
    "metadata": {},
    "outputs": [],
@@ -587,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "94147fd2",
    "metadata": {},
    "outputs": [
@@ -595,6 +594,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "RMS Results:\n",
       "RMS_LSST-g: 0.130852 (N = 83)\n",
       "RMS_LSST-r: 0.123455 (N = 133)\n",
       "RMS_LSST-i: 0.121236 (N = 137)\n"
@@ -614,7 +615,11 @@
     "    N = len(band_data)\n",
     "    rms = np.sqrt(np.mean(band_data**2))\n",
     "    rms_results.append((band, N, rms))\n",
-    "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")\n"
+    "\n",
+    "# Print RMS results\n",
+    "print(\"\\nRMS Results:\")\n",
+    "for band, N, rms in rms_results:\n",
+    "    print(f\"RMS_{band}: {rms:.6f} (N = {N})\")"
    ]
   },
   {
