--- a/scatter_compare.ipynb
+++ b/scatter_compare.ipynb
@@ -9819,7 +9819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "db5c8056",
    "metadata": {},
    "outputs": [
@@ -9858,7 +9858,9 @@
     "    if file_name.endswith(\".DAT\"):\n",
     "        plus_scatter_sim_list.append(file_name)\n",
     "\n",
-    "print(plus_scatter_sim_list)\n"
+    "print(plus_scatter_sim_list)\n",
+    "\n",
+    "#\n"
    ]
   },
   {
