--- a/MYC21_080525_SIM_DELR_SAT5mil_10k.ipynb
+++ b/MYC21_080525_SIM_DELR_SAT5mil_10k.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f36285a6",
    "metadata": {},
    "outputs": [
@@ -506,8 +506,7 @@
     "band_data = merged_df.loc[band_mask, \"DELTA_M\"]\n",
     "print(f\"\\n--- {band} ---\")\n",
     "print(\"NaNs:\", band_data.isna().sum())\n",
-    "print(\"Infs:\", np.isinf(band_data).sum())\n",
-    "print(\"Sample:\", band_data.head())"
+    "print(\"Infs:\", np.isinf(band_data).sum())\n"
    ]
   },
   {
