--- a/MYC21_080525_SIM_DELR_SAT10mil_10k.ipynb
+++ b/MYC21_080525_SIM_DELR_SAT10mil_10k.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d667e6c4",
    "metadata": {},
    "outputs": [
@@ -163,8 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MYC21_080525_BAYESN_NOSCATTER_DELR_SAT5mil_10k near-peak rows: 35022\n",
-      "MYC21_080525_BAYESN_PLUSSCATTER_DELR_SAT5mil_10k near-peak rows: 35022\n"
+      "MYC21_080525_BAYESN_NOSCATTER_DELR_SAT10mil_10k near-peak rows: 35022\n",
+      "MYC21_080525_BAYESN_PLUSSCATTER_DELR_SAT10mil_10k near-peak rows: 35022\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged data saved to ver_csv_files/MYC21_080525_BAYESN_SAT5mil_10k_merged_near_peak_rows_n_d.csv\n"
+      "Merged data saved to ver_csv_files/MYC21_080525_BAYESN_SAT10mil_10k_merged_near_peak_rows_n_d.csv\n"
      ]
     }
    ],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f36285a6",
    "metadata": {},
    "outputs": [
@@ -492,13 +492,7 @@
       "\n",
       "--- LSST-i ---\n",
       "NaNs: 0\n",
-      "Infs: 0\n",
-      "Sample: 2    -0.056073\n",
-      "5    -0.004274\n",
-      "9    -0.062081\n",
-      "13   -0.018599\n",
-      "15   -0.002006\n",
-      "Name: DELTA_M, dtype: float64\n"
+      "Infs: 0\n"
      ]
     }
    ],
@@ -506,8 +500,7 @@
     "band_data = merged_df.loc[band_mask, \"DELTA_M\"]\n",
     "print(f\"\\n--- {band} ---\")\n",
     "print(\"NaNs:\", band_data.isna().sum())\n",
-    "print(\"Infs:\", np.isinf(band_data).sum())\n",
-    "print(\"Sample:\", band_data.head())"
+    "print(\"Infs:\", np.isinf(band_data).sum())"
    ]
   },
   {
